Merge from 2.3 maintenance branch
git-svn-id: https://taverna.googlecode.com/svn/taverna/engine/net.sf.taverna.t2.activities/trunk/wsdl-activity@13607 bf327186-88b3-11dd-a302-d386e5130c1c